# stack_max_O1

./: .gitignore  CMakeLists.txt  README  README.md  build.sh  generate_data.py  main.cpp  run_solver1_benchmark.sh  run_valgrind.sh  validate_test_data.py
benchmarks/: CMakeLists.txt  benchmark_2.cpp  benchmark_3.cpp
doc/: benchmarks.md  code.md  info.md  tests.md
doc/latex/: report.tex
resources/: graph.nb
results/: benchmark_1_1.txt  benchmark_2_1.txt  benchmark_3_1.txt  massif_solver2_benchmark_memory_default_stack.out  massif_solver2_benchmark_memory_default_stack.result  massif_solver2_benchmark_memory_stack_for_latex.out  massif_solver2_benchmark_memory_stack_for_latex.result  massif_solver3_benchmark_memory_base_stack_for_latex.out  massif_solver3_benchmark_memory_base_stack_for_latex.result  massif_solver3_benchmark_memory_base_stack_for_latex_2.out  massif_solver3_benchmark_memory_base_stack_for_latex_2.result  massif_solver3_benchmark_memory_base_stack_for_latex_3.out  massif_solver3_benchmark_memory_base_stack_for_latex_3.result  massif_solver3_benchmark_memory_stack_for_latex.out  massif_solver3_benchmark_memory_stack_for_latex.result  massif_solver3_benchmark_memory_stack_for_latex_2.out  massif_solver3_benchmark_memory_stack_for_latex_2.result  massif_solver3_benchmark_memory_stack_for_latex_3.out  massif_solver3_benchmark_memory_stack_for_latex_3.result
solvers/: CMakeLists.txt
solvers/solver_1/: CMakeLists.txt  solution.cpp
solvers/solver_2/: CMakeLists.txt
src/: CMakeLists.txt  config.hpp.in
src/base_stack/: base_stack.hpp
src/default_stack_list/: CMakeLists.txt  default_stack_list.cpp  default_stack_list.hpp
src/solver_1/: CMakeLists.txt  solution.cpp  solution.hpp
src/solver_1/benchmarks/: CMakeLists.txt  benchmark_1.cpp
src/solver_1/tests/: CMakeLists.txt  user_tests.cpp
src/solver_2/: CMakeLists.txt  solution.cpp  solution.hpp
src/solver_2/benchmarks/: CMakeLists.txt  benchmark_memory_default_stack.cpp  benchmark_memory_stack.cpp
src/solver_2/tests/: CMakeLists.txt  user_tests.cpp
src/solver_3/: CMakeLists.txt  solution.cpp  solution.hpp
src/solver_3/benchmarks/: CMakeLists.txt  benchmark_memory_base_stack.cpp  benchmark_memory_stack.cpp
src/solver_3/tests/: CMakeLists.txt  user_tests.cpp
src/standard_solution/: CMakeLists.txt  standard_solution.cpp
tests/: CMakeLists.txt  standard_solution.hpp
